--- a/src/components/Tictoctoe.css
+++ b/src/components/Tictoctoe.css
@@ -3,6 +3,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 20px;
   }
   body{
     background-color: black;
@@ -20,3 +21,4 @@ h1{
     justify-content: center;
     align-items: center;
   }
+  
